Fix cursor for the expand collapse information bar [skip ci]

--- a/website/static/css/file-browser.css
+++ b/website/static/css/file-browser.css
@@ -151,6 +151,7 @@
     text-align: center;
     padding-top: 15px;
     color: #666;
+    cursor: pointer;
 }
 
 .fb-information .tag:hover {
